kubernetes/base/database/instances/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cognitive-postgres-bank
  namespace: cognitive-bank
spec:
  serviceName: cognitive-postgres-bank
  replicas: 1
  selector:
    matchLabels:
      app: cognitive-postgres-bank
  template:
    metadata:
      labels:
        app: cognitive-postgres-bank
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-cognitive-postgres-bank-0
